crates/telemetry-adapters/tests/snapshots/snapshots_rally_offroad__wrc_kylotonn_rally_snapshot.snap
---
source: crates/telemetry-adapters/tests/snapshots_rally_offroad.rs
expression: normalized
---
speed_ms: 22
steering_angle: -0.3
throttle: 0.85
brake: 0
clutch: 0
rpm: 5500
max_rpm: 7500
gear: 3
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: false
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0
engine_temp_c: 0
extended:
  hand_brake:
    type: Float
    value: 0
  pitch:
    type: Float
    value: 0.02
  pos_x:
    type: Float
    value: 120
  pos_y:
    type: Float
    value: 45
  pos_z:
    type: Float
    value: -30
  roll:
    type: Float
    value: 0.05
  rpm_fraction:
    type: Float
    value: 0.73333335
  stage_progress:
    type: Float
    value: 0.42
  suspension_fl:
    type: Float
    value: 0.02
  suspension_fr:
    type: Float
    value: 0.01
  suspension_rl:
    type: Float
    value: 0.03
  suspension_rr:
    type: Float
    value: 0.02
  wheel_speed_fl:
    type: Float
    value: 22.5
  wheel_speed_fr:
    type: Float
    value: 22.3
  wheel_speed_rl:
    type: Float
    value: 21.8
  wheel_speed_rr:
    type: Float
    value: 22
  yaw:
    type: Float
    value: 1.1
sequence: 0
